--- a/src/templates/rabble/index.html
+++ b/src/templates/rabble/index.html
@@ -1,11 +1,19 @@
 {% extends "rabble/base.html" %}
-
+    
 {% block content %}
-<p>
-   {% if user.is_authenticated %}
-    <p>Welcome {{user.username}}!</p>
-    {% else %}
-    <p>Welcome to Rabble!</p>
-    {% endif %} 
-</p>
+  {% if subrabbles %}
+    <ul class="list-group">
+      {% for sr in subrabbles %}
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <div>
+            <strong>!{{ sr.subrabble_name }}</strong><br>
+            <small class="text-muted">{{ sr.description }}</small>
+          </div>
+          <a href="{% url 'subrabble-detail' sr.subrabble_name %}" class="btn btn-sm btn-outline-primary">View</a>
+        </li>
+      {% endfor %}
+    </ul>
+  {% else %}
+    <p>No subRabbles yet. Create one to get started!</p>
+  {% endif %}
 {% endblock content %}
