--- a/src/templates/rabble/index.html
+++ b/src/templates/rabble/index.html
@@ -1,6 +1,11 @@
 {% extends "rabble/base.html" %}
     
 {% block content %}
+{% if not user.is_authenticated %}
+    <p>
+        This is the index page. Login to access subrabbles.
+    </p>
+{% else %}
   {% if subrabbles %}
     <ul class="list-group">
       {% for sr in subrabbles %}
@@ -15,5 +20,6 @@
     </ul>
   {% else %}
     <p>No subRabbles yet. Create one to get started!</p>
-  {% endif %}
+    {% endif %}
+{% endif %}
 {% endblock content %}
