--- a/src/templates/rabble/post-detail.html
+++ b/src/templates/rabble/post-detail.html
@@ -16,9 +16,11 @@
 
         <div class="d-flex justify-content-start align-items-center gap-3 mt-4">
             <span>💬 {{ post.comment_count }}</span>
+            {% if user == post.author %}
             <a href="{% url 'post-edit' subrabble.subrabble_name post.pk %}" class="btn btn-outline-secondary btn-sm ms-2">
                 Edit Post
             </a>
+            {% endif %}
         </div>
     </div>
 
